# n-body-cuda

./: .gitignore  CMakeLists.txt  CONSTANTS.h  NbKernel_N2.cu  NbKernel_N2.cuh  NbKernel_N2_Verlet.cu  NbKernel_N2_Verlet.cuh  NbSystemCUDA.cu  NbSystemCUDA.cuh  NbodyRenderer.cpp  NbodyRenderer.h  PYnalaysis.html  PYnalaysis.ipynb  README.md  nbody_binary.ipynb  nbody_last_mass.ipynb  nbody_notebook.html  nbody_notebook.ipynb  nbody_notebook_old.ipynb
graphs/: PYnalaysis.html
old/: NbKernel_N2_Verlet.cu  NbKernel_N2_Verlet.cuh  NbodyN2.cu  NbodyN2.cuh
report/interim/: biblio.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc
report/interim/base/: packages.tex  styles.tex
report/interim/paper/: abstract.aux  abstract.tex  background.tex  cover_page.tex  introduction.tex  methodology.tex  title_page.tex
